@@ -37,4 +37,8 @@ PHP_FUNCTION(getdir);
 PHP_FUNCTION(glob);
 PHP_FUNCTION(scandir);
 
+#define PHP_SCANDIR_SORT_ASCENDING 0
+#define PHP_SCANDIR_SORT_DESCENDING 1
+#define PHP_SCANDIR_SORT_NONE 2
+
 #endif /* PHP_DIR_H */
